[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/PlayScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Icons/141.png" type="Texture" id=2]
[ext_resource path="res://fonts/Odin Rounded - Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Icons/7.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Icons/22.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Icons/173.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Icons/45.png" type="Texture" id=7]
[ext_resource path="res://Sprites/SideRoadThings/Green.png" type="Texture" id=8]
[ext_resource path="res://Sprites/SideRoadThings/Black.png" type="Texture" id=9]
[ext_resource path="res://Scences/RoadStrips.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/cars/car_1.png" type="Texture" id=11]
[ext_resource path="res://Scences/car_spawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/player_car_body.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Icons/43_1.png" type="Texture" id=14]
[ext_resource path="res://Scences/Coin_spawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/Icons/0.png" type="Texture" id=16]
[ext_resource path="res://Sound_tracks/car-window-breaking-1551.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound_tracks/score_sound_1.wav" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=13]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 176, 435 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "left car hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 435 ), Vector2( 176, 327 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "right car hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 305, 435 ), Vector2( 305, 327 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.5, 118.75 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../hit_car:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 176, 435 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../hit_car:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "lef car hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../hit_car:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 435 ), Vector2( 176, 327 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../hit_car:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "left_to_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 135, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "right car hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../hit_car:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 305, 435 ), Vector2( 305, 327 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../hit_car:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "right_to_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 135, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 80
outline_size = 1
outline_color = Color( 0.258824, 0.184314, 0.0196078, 1 )
font_data = ExtResource( 3 )

[node name="PlayScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="road_black" type="Sprite" parent="."]
position = Vector2( 222, 436 )
scale = Vector2( 1, 0.767568 )
texture = ExtResource( 9 )

[node name="road_green_left" type="Sprite" parent="."]
position = Vector2( -40, 439.5 )
scale = Vector2( 0.366029, 0.725097 )
texture = ExtResource( 8 )

[node name="road_green_left2" type="Sprite" parent="."]
position = Vector2( 520, 433 )
scale = Vector2( 0.366029, 0.728957 )
texture = ExtResource( 8 )

[node name="RoadStrips" parent="." instance=ExtResource( 10 )]

[node name="Score" type="Sprite" parent="."]
position = Vector2( 240, 60 )
scale = Vector2( 1.28358, 1 )
texture = ExtResource( 14 )

[node name="score_lable" type="Label" parent="Score"]
margin_left = -32.0
margin_top = -15.0
margin_right = 53.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.737255, 0.823529, 0.870588, 1 )
custom_fonts/font = SubResource( 13 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_sprite" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 420, 60 )
scale = Vector2( 0.32, 0.25 )
texture = ExtResource( 2 )

[node name="Play_sprite" type="Sprite" parent="Pause_sprite"]
visible = false
texture = ExtResource( 7 )

[node name="Play_Pause_btn" type="Button" parent="Pause_sprite"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
margin_left = -91.0
margin_top = -92.0
margin_right = 88.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_Btn_icon" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 60, 60 )
scale = Vector2( 0.32, 0.25 )
texture = ExtResource( 6 )

[node name="back_Btn" type="Button" parent="Back_Btn_icon"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -89.2369
margin_top = -96.7273
margin_right = 88.7631
margin_bottom = 100.273
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hit_car" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 176, 435 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="hit_car"]
anims/RESET = SubResource( 10 )
"anims/left car hit" = SubResource( 11 )
"anims/right car hit" = SubResource( 12 )

[node name="Coin_spawner" parent="." instance=ExtResource( 15 )]

[node name="car_spawner" parent="." instance=ExtResource( 12 )]

[node name="player_car_body" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_car_body"]
position = Vector2( 173, 658 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 4 )

[node name="player_car" type="Sprite" parent="player_car_body"]
position = Vector2( 175, 655 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player_car_body"]
pause_mode = 2
anims/RESET = SubResource( 5 )
"anims/lef car hit" = SubResource( 8 )
anims/left_to_right = SubResource( 6 )
"anims/right car hit" = SubResource( 9 )
anims/right_to_left = SubResource( 7 )

[node name="exit_confirmation" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 245, 318 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="level_btn_lable" type="Label" parent="exit_confirmation"]
anchor_right = 1.0
margin_left = -474.0
margin_top = -186.0
margin_right = -364.0
margin_bottom = -32.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Are you sure you want
to exit?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" type="Sprite" parent="exit_confirmation"]
position = Vector2( -192, 124 )
scale = Vector2( 0.68, 0.56 )
texture = ExtResource( 5 )

[node name="yes_lbl" type="Label" parent="exit_confirmation/yes"]
anchor_right = 1.0
margin_left = -144.118
margin_top = -75.0
margin_right = -280.118
margin_bottom = 79.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Y e s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_btn" type="Button" parent="exit_confirmation/yes"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -209.0
margin_top = -93.0
margin_right = 215.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="Sprite" parent="exit_confirmation"]
position = Vector2( 192, 124 )
scale = Vector2( 0.68, 0.56 )
texture = ExtResource( 5 )

[node name="no_lbl2" type="Label" parent="exit_confirmation/no"]
anchor_right = 1.0
margin_left = -155.882
margin_top = -82.1428
margin_right = -273.882
margin_bottom = 71.8572
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "N o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_btn" type="Button" parent="exit_confirmation/no"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -209.0
margin_top = -93.0
margin_right = 212.0
margin_bottom = 96.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 245, 332.5 )
scale = Vector2( 0.5, 0.608974 )
texture = ExtResource( 4 )

[node name="statement_lable" type="Label" parent="GameOver"]
anchor_right = 1.0
margin_left = -544.0
margin_top = -235.642
margin_right = -308.0
margin_bottom = -81.6421
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Your Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_sprite" type="Sprite" parent="GameOver"]
position = Vector2( -8, -36.9474 )
scale = Vector2( 1.05269, 0.821053 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="GameOver/Score_sprite"]
margin_left = -203.288
margin_top = -54.0
margin_right = 195.712
margin_bottom = 61.0
custom_colors/font_color = Color( 0.780392, 0.592157, 0.137255, 1 )
custom_fonts/font = SubResource( 14 )
text = "100000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Sprite" parent="GameOver"]
position = Vector2( -192, 133.832 )
scale = Vector2( 0.68, 0.459789 )
texture = ExtResource( 5 )

[node name="Play_lbl" type="Label" parent="GameOver/Play"]
anchor_right = 1.0
margin_left = -144.118
margin_top = -75.0
margin_right = -280.118
margin_bottom = 79.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "P L A Y"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play_btn" type="Button" parent="GameOver/Play"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
margin_left = -209.0
margin_top = -93.0
margin_right = 215.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Sprite" parent="GameOver"]
pause_mode = 2
position = Vector2( 192, 133.832 )
scale = Vector2( 0.68, 0.459789 )
texture = ExtResource( 5 )

[node name="Home_lbl2" type="Label" parent="GameOver/Home"]
anchor_right = 1.0
margin_left = -155.882
margin_top = -82.1428
margin_right = -273.882
margin_bottom = 71.8572
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "H O M E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home_btn" type="Button" parent="GameOver/Home"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
margin_left = -209.0
margin_top = -93.0
margin_right = 212.0
margin_bottom = 96.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 18 )

[node name="Car_hit_sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 17 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="button_down" from="Pause_sprite/Play_Pause_btn" to="." method="_on_Play_Pause_btn_button_down"]
[connection signal="button_down" from="Back_Btn_icon/back_Btn" to="." method="_on_back_Btn_button_down"]
[connection signal="animation_finished" from="hit_car/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="player_car_body" to="." method="_on_player_car_body_area_entered"]
[connection signal="button_up" from="exit_confirmation/yes/yes_btn" to="." method="_on_yes_btn_button_up"]
[connection signal="button_up" from="exit_confirmation/no/no_btn" to="." method="_on_no_btn_button_up"]
[connection signal="button_up" from="GameOver/Play/Play_btn" to="." method="_on_Play_btn_button_up"]
[connection signal="button_up" from="GameOver/Home/Home_btn" to="." method="_on_Home_btn_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
